# context-py

./: README.md  benchmark_loading.py  benchmark_serialization_and_edits.py  makedoc.py  makewheel.sh  pyproject.toml
benchmarks/: profile_getattribute_callers.py  profile_hotspots.py  profile_mark_dirty.py
docs/: Anchor.md  Axis.md  Features.md  Font.md  Glyph.md  Guide.md  Instance.md  Layer.md  Master.md  Names.md  Node.md  Shape.md  index.md
docs/_data/: navigation.yml
src/context/: Anchor.py  Axis.py  BaseObject.py  Features.py  Font.py  Glyph.py  Guide.py  Instance.py  Layer.py  Master.py  Names.py  Node.py  Shape.py  __init__.py
src/context/convertors/: __init__.py  nfsf.py
src/context/fontFilters/: customParameters.py  glyphDataXML.py  intermediateLayer.py
tests/: test_dataclasses.py  test_dirty_tracking.py  test_features.py  test_field_aliases.py  test_in_memory_roundtrip.py  test_input_validation.py  test_new_object_tracking.py  test_roundtrip.py  test_to_dict_from_dict.py  test_tracked_dict.py
