[build-system]
requires = [
   "setuptools>=69.5.1",
   "setuptools_scm[toml]>=8.1.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
dynamic = ["version"]
name = "contextfonteditor"
description = "Load, examine and save fonts in Context format"
authors = [
    { name = "Simon Cozens", email= "simon@simon-cozens.org" }
]
readme = "README.md"

dependencies = [
    "orjson >= 3.5.1",
    "fonttools >=4.53.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
context = 'context.__main__:main'

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
testpaths = ["tests"]

[tool.setuptools_scm]
git_describe_command = "git describe --match 'v*' --tags"
